--- a/AoC2024/AoC2024/AoC2024.csproj
+++ b/AoC2024/AoC2024/AoC2024.csproj
@@ -7,4 +7,14 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <None Update="Day1\input.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\AoC.Shared\AoC.Shared.csproj" />
+    </ItemGroup>
+
 </Project>
