Remove input files

--- a/.gitignore
+++ b/.gitignore
@@ -806,3 +806,7 @@ fabric.properties
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/rider,csharp,dotnetcore,aspnetcore,visualstudio,visualstudiocode
+
+
+# AoC input files
+**/input.txt
