--- a/AoC2024/AoC2024/AoC2024.csproj
+++ b/AoC2024/AoC2024/AoC2024.csproj
@@ -38,6 +38,9 @@
       <None Update="Day10\input.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Day11\input.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
