2024 Day 12 Part Two

--- a/AoC2024/AoC2024.Tests/AoC2024.Tests.csproj
+++ b/AoC2024/AoC2024.Tests/AoC2024.Tests.csproj
@@ -87,6 +87,12 @@
       <None Update="Day12\TestInput_c.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Day12\TestInput_d.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Day12\TestInput_e.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
