--- a/AoC2024/AoC2024.Tests/AoC2024.Tests.csproj
+++ b/AoC2024/AoC2024.Tests/AoC2024.Tests.csproj
@@ -96,6 +96,9 @@
       <None Update="Day13\TestInput_a.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Day14\TestInput_a.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
