--- a/AoC2024/AoC2024.Tests/AoC2024.Tests.csproj
+++ b/AoC2024/AoC2024.Tests/AoC2024.Tests.csproj
@@ -123,6 +123,9 @@
       <None Update="Day18\TestInput_a.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Day19\TestInput_a.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
