--- a/AoC2024/AoC2024.Tests/AoC2024.Tests.csproj
+++ b/AoC2024/AoC2024.Tests/AoC2024.Tests.csproj
@@ -132,6 +132,9 @@
       <None Update="Day22\TestInput_b.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Day23\TestInput_a.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
