--- a/AoC2024/AoC2024/AoC2024.csproj
+++ b/AoC2024/AoC2024/AoC2024.csproj
@@ -68,6 +68,9 @@
       <None Update="Day22\input.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day23\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
