--- a/AoC2024/AoC2024/AoC2024.csproj
+++ b/AoC2024/AoC2024/AoC2024.csproj
@@ -74,6 +74,9 @@
       <None Update="Day24\input.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day25\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
