--- a/AoC2021/AoC2021.Tests/AoC2021.Tests.csproj
+++ b/AoC2021/AoC2021.Tests/AoC2021.Tests.csproj
@@ -50,6 +50,9 @@
       <None Update="Day9\TestInput_a.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Day10\TestInput_a.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
