--- a/AoC2021/AoC2021/AoC2021.csproj
+++ b/AoC2021/AoC2021/AoC2021.csproj
@@ -40,6 +40,9 @@
     <None Update="Day9\input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Day10\input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
