--- a/AoC2021/AoC2021.Tests/AoC2021.Tests.csproj
+++ b/AoC2021/AoC2021.Tests/AoC2021.Tests.csproj
@@ -53,6 +53,9 @@
       <None Update="Day10\TestInput_a.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Day11\TestInput_a.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
