--- a/AoC2021/AoC2021/AoC2021.csproj
+++ b/AoC2021/AoC2021/AoC2021.csproj
@@ -49,6 +49,9 @@
     <None Update="Day12\input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Day13\input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
