--- a/AoC2021/AoC2021.Tests/AoC2021.Tests.csproj
+++ b/AoC2021/AoC2021.Tests/AoC2021.Tests.csproj
@@ -68,6 +68,9 @@
       <None Update="Day13\TestInput_a.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Day14\TestInput_a.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
