--- a/AoC2025/AoC2025/AoC2025.csproj
+++ b/AoC2025/AoC2025/AoC2025.csproj
@@ -11,4 +11,10 @@
     <ProjectReference Include="..\..\AoC.Shared\AoC.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Day1\input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
