--- a/AoC2025/AoC2025.Tests/AoC2025.Tests.csproj
+++ b/AoC2025/AoC2025.Tests/AoC2025.Tests.csproj
@@ -23,6 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Day8\TestInput_a.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Day7\TestInput_a.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
